added new xlsx file with main sheet = org list and additional sheets to describe variables.
Complete the org list with the missing orgs. Now contains all org as of 25/06/21. Recommendation model fail to correctly recommend orgs in 'Le Sud-Ouest' area.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,7 +33,8 @@ body {
     background: #ffffff;
 }
 
-.form {
+
+form {
     display: flex;
     flex-direction: column;
 }
@@ -41,11 +42,16 @@ body {
 div.form-row {
     margin-left: 35%;
     margin-bottom: 2%;
+    margin-right: 35%;
 }
 
 .checkbox-input {
     margin-left: 7%;
     margin-top: 2%;
+}
+
+.checkbox-input.role {
+    column-count: 2;
 }
 
 .btn-submit {
