New design + add link + add description

--- a/templates/topOrgsPreset.html
+++ b/templates/topOrgsPreset.html
@@ -4,18 +4,39 @@
     <meta charset="UTF-8">
     <title>Organization Recommendation Engine</title>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
 <body>
 
-    {% for i in range(0, 5) %}
-        <div>
-            <img src="{{ url_for('static', filename='media/logo/' + orgNames[i] + '.png') }}" alt="{{ orgNames[i] }} logo" class="logo"><br>
-            <div>
-                {{ descriptions[i] }}
-            </div>
+    <h1 class="page-title">Your recommended organizations: </h1>
+    <div class="org-directory">
+    {% for i in range(0, 3) %}
+        <div class="org-column org-{{i}}">
+            <a href="{{links[i]}}">
+                <div class="org">
+                    <h3 class="org-title"> {{orgNames[i] }} </h3>
+                    <img class="org-img" src="{{ url_for('static', filename='media/logo/' + orgAdress[i] + '.png') }}" alt="{{ orgAdress[i] }} logo" class="logo"><br>
+                    <div class="description">
+                        {{ descriptions[i] }}
+                    </div>
+                </div>
+            </a>
         </div>
     {%endfor%}
+    </div>
 
+    <h4 class="page-subtitle">
+        Other Organizations to consider: 
+    </h4>
+    <div class="org-other">
+    {% for i in range(3, 5) %}
+        <a href="{{ links[i] }}"><h5 class="org-other-title">  {{orgNames[i] }} </h5></a>
+    {%endfor%}
+    </div>
+
+    <div class="btn">
+        <a href="/"><button class="btn-submit">Make a new search</button></a>
+    </div>
 </body>  
 </html>
