--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@
     border: 1px solid #dddddd;
     cursor: pointer;
     border-radius: 5px;
-    font-family: 'open sans';
+    font-family: Raleway;
     font-size: 18px;
   
 }
@@ -19,12 +19,23 @@ body {
     font-family: Raleway;
 }
 
-.title {
+.page-title {
     color: #1037a2;
     font-weight: 800;
-    font-size: 26px;
-    margin: 0px 0px 30px;
+    font-size: 35px;
+    margin: 0px 0px 50px;
     text-align: center;
+    font-family: Raleway;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+}
+
+.page-subtitle {
+    font-size: 28px;
+    font-weight: 800;
+    color: #1037a2;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
 }
 
 .select:focus,
@@ -45,7 +56,7 @@ form {
 
 div.form-row {
     margin-left: 35%;
-    margin-bottom: 2%;
+    margin-bottom: 1.5%;
     margin-right: 35%;
 }
 
@@ -58,6 +69,12 @@ div.form-row {
     column-count: 2;
 }
 
+.btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5%;
+}
+
 .btn-submit {
     text-align: center; 
     background: #1037a2;
@@ -66,12 +83,11 @@ div.form-row {
     padding: 5px 28px;
     font-family: Raleway;
     color: #fff;
-    align-self: center;
     border: 0px;
 }
 
 #btn:focus,
-#btn:hover {
+.btn-submit:hover {
     opacity: 0.8;
     /* outline: none;
     border: 1px solid #bbbbbb; */
@@ -86,4 +102,73 @@ span {
     text-align: center;
 }
 
+.org-directory {
+    /* column-count: 3; */
+    display: flex;
+    justify-content: space-around;
+}
 
+a, a:link, a:visited, a:focus, a:hover, a:active{
+    text-decoration:none; 
+    color: inherit;
+}
+
+.org-column {
+    break-inside: avoid;  
+    flex-basis: 30%;
+}
+
+.org {
+    background: #f4f4f4;
+    border-radius: 15px;
+    box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+    padding: 8px;
+    /* flex-basis: 25%; */
+}
+
+.org-0 {
+    order: 1;
+}
+
+.org-1 {
+    margin-top: 100px;
+    order: 0;
+}
+
+.org-2 {
+    margin-top: 200px;
+    order:2;
+}
+
+.org-title {
+    color: #1037a2;
+    font-weight: 600;
+    text-align: center;
+    font-size: 24px;
+}
+
+.org-img {
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 12px;
+}
+
+.description {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    font-weight: bold;
+    color: #777777;
+    text-align: center;
+}
+
+.org-other {
+    margin-left: 5%;
+    font-size: 24px;
+}
+
+.org-other-title {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+}
