--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body style="background: #ffffff;">
     <div class="login">
         <!-- Main Input For Receiving Query to our ML -->
-        <h1 class="title">
+        <h1 class="page-title">
             Select your organization preferences: 
         </h1>
         <form action="{{ url_for('predict')}}"method="post">
@@ -104,7 +104,7 @@
                     </label>
                 </div>
             </div>
-            <div style="align-self: center;">
+            <div class="btn">
                 <button type="submit" class="btn-submit">Submit</button>
             </div>
         </form>
