--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,7 @@ body {
     color: #1037a2;
     margin-block-start: 0.5em;
     margin-block-end: 0.5em;
+    text-align: center;
 }
 
 .select:focus,
@@ -104,8 +105,10 @@ span {
 
 .org-directory {
     /* column-count: 3; */
+    max-width: 950px;
     display: flex;
     justify-content: space-around;
+    margin: auto;
 }
 
 a, a:link, a:visited, a:focus, a:hover, a:active{
@@ -171,4 +174,6 @@ a, a:link, a:visited, a:focus, a:hover, a:active{
 .org-other-title {
     margin-block-start: 0.5em;
     margin-block-end: 0.5em;
+    text-align: center;
+    margin-right: 100px;
 }
