--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,10 +143,18 @@ a, a:link, a:visited, a:focus, a:hover, a:active{
     order:2;
 }
 
+.medal {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+}
+
 .org-title {
     font-weight: 600;
     text-align: center;
     font-size: 24px;
+    margin-top: 5px;
 }
 
 .org-img {
