Fix recommendation bug with localisation

--- a/templates/topOrgsPreset.html
+++ b/templates/topOrgsPreset.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1 class="page-title">Your recommended organizations: </h1>
+    <h1 class="page-title" style="margin-block-end: 0.5em;">Your recommended organizations: </h1>
     <div class="org-directory">
     {% for i in range(0, 3) %}
         <div class="org-column org-{{i}}">
